Fixed Project Layout on Mobile

--- a/projects/project.css
+++ b/projects/project.css
@@ -402,6 +402,9 @@ footer {
     .prev-project, .next-project {
         top: 15%;
     }
+    .project-header {
+        margin-top: -50px;
+    }
     .project-header h1 {
         font-size: 1.8rem;
     }
